Alexandria is able to retrieve book information and cover images from
a wide variety of online data sources. It also features extensive
import and export options, a loan interface, and smart libraries. 
Alexandria is written in Ruby using ruby-gnome2.

* Where can I get it?
=====================

- A source package can be downloaded at http://rubyforge.org/frs/?group_id=205

- An ad-hoc deb file (for Debian, Ubuntu & gNewSense) can be downloaded from there too

- SVN can be accessed here: http://alexandria.rubyforge.org/svn/trunk/alexandria

* What's New in 0.6.4b1?
======================

New Dependencies:
- All book providers now require Hpricot (a.k.a. libhpricot-ruby) for HTML parsing
- DeaStore requires HTMLEntities (a.k.a. libhtmlentities-ruby)

Changes:

- Better GUI feedback when adding books by ISBN
- Temporarily removed some broken providers, but completely rewrote others
- Better (though not perfect) handling of character encoding
- Improved stability (fewer crashes)

0.6.4 contains a large number of bug fixes. These include fixes for:

- [#19042] Icon view tooltips cause crashes on x86_64
           [Work-around for an issue with ruby-gnome2 (pre 0.17.0)]
- [#20080] Icon view tooltips cause crashes when publisher not defined
- [#23908] Adding manually without ISBN is unstable
- [#10929] Usability: advanced settings checkbox invisible without Ruby/ZOOM

Translations:

- New Greek translation ( Michael Kotsarinis)
- New Macedonian translation (Damjan Dimitrioski)
- New Norwegian (Bokmål) translation (Jack Myrseh)

- Improved Italian translation (Giacomo Margarito)
- Improved Polish translation (Piotr Drąg)
- Improved Portuguese (Brazil) and French translations (Lígia Moreira)
- Improved Swedish translation (Martin Karlsson)

Where can I find out more?
==========================
 * Website: http://alexandria.rubyforge.org/
 * Screenshots/Screencast: http://alexandria.rubyforge.org/screenshots.html